--- a/SocialApp/StoryBoardView/Base.lproj/Main.storyboard
+++ b/SocialApp/StoryBoardView/Base.lproj/Main.storyboard
@@ -6213,7 +6213,7 @@ Unlimited filter use</string>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qVw-UW-bPf">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="X37-D9-e5K">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="X37-D9-e5K">
                                                 <rect key="frame" x="20" y="10" width="345" height="35"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo round" translatesAutoresizingMaskIntoConstraints="NO" id="GAm-nU-7XH">
@@ -6224,11 +6224,19 @@ Unlimited filter use</string>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inbox" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7xK-9K-xII">
-                                                        <rect key="frame" x="55" y="0.0" width="290" height="35"/>
+                                                        <rect key="frame" x="55" y="0.0" width="230" height="35"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                         <color key="textColor" name="TitleColour(#000000)"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OMZ-bI-lBO">
+                                                        <rect key="frame" x="305" y="0.0" width="40" height="35"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="40" id="EQW-C5-Ewq"/>
+                                                        </constraints>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" title="Button" image="more "/>
+                                                    </button>
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="Ndy-ED-fPg"/>
@@ -6250,11 +6258,10 @@ Unlimited filter use</string>
                                                 <rect key="frame" x="15" y="5" width="345" height="0.0"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search-interface-symbol" translatesAutoresizingMaskIntoConstraints="NO" id="mLK-Eg-F8i">
-                                                        <rect key="frame" x="15" y="-20" width="25" height="40"/>
+                                                        <rect key="frame" x="15" y="-5.3333333333333286" width="25" height="10.666666666666666"/>
                                                         <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="25" id="HU6-4o-l0b"/>
-                                                            <constraint firstAttribute="height" constant="40" id="VPF-1U-vcI"/>
                                                         </constraints>
                                                     </imageView>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e5q-y4-iTL">
@@ -6265,7 +6272,6 @@ Unlimited filter use</string>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.93455880402689862" green="0.93887313504368075" blue="0.95181612809402716" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="bottom" secondItem="e5q-y4-iTL" secondAttribute="bottom" constant="2" id="PWm-Qb-zTw"/>
                                                     <constraint firstItem="mLK-Eg-F8i" firstAttribute="centerY" secondItem="0dh-Uc-MFW" secondAttribute="centerY" id="Ulp-jc-VDk"/>
                                                     <constraint firstItem="e5q-y4-iTL" firstAttribute="leading" secondItem="mLK-Eg-F8i" secondAttribute="trailing" constant="5" id="aot-ex-3Z6"/>
                                                     <constraint firstItem="e5q-y4-iTL" firstAttribute="top" secondItem="0dh-Uc-MFW" secondAttribute="top" constant="2" id="o4b-3x-2tF"/>
@@ -13367,14 +13373,14 @@ Unlimited filter use</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash 1" translatesAutoresizingMaskIntoConstraints="NO" id="FjI-tk-GLe">
-                                <rect key="frame" x="0.0" y="-3" width="375" height="815"/>
+                                <rect key="frame" x="0.0" y="-19" width="375" height="831"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="kQr-ti-1Vp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="kQr-ti-1Vp" firstAttribute="trailing" secondItem="FjI-tk-GLe" secondAttribute="trailing" id="7OB-7e-BHe"/>
-                            <constraint firstItem="FjI-tk-GLe" firstAttribute="top" secondItem="kQr-ti-1Vp" secondAttribute="top" constant="-50" id="Gyp-u0-7Mu"/>
+                            <constraint firstItem="FjI-tk-GLe" firstAttribute="top" secondItem="kQr-ti-1Vp" secondAttribute="top" constant="-66" id="Gyp-u0-7Mu"/>
                             <constraint firstItem="FjI-tk-GLe" firstAttribute="leading" secondItem="kQr-ti-1Vp" secondAttribute="leading" id="fH1-Ib-Ve6"/>
                             <constraint firstItem="kQr-ti-1Vp" firstAttribute="bottom" secondItem="FjI-tk-GLe" secondAttribute="bottom" constant="-34" id="oh8-W3-QDh"/>
                         </constraints>
@@ -14127,7 +14133,7 @@ Unlimited filter use</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.96852236989999996" green="0.96868795159999999" blue="0.96851199870000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <pickerView key="tableFooterView" hidden="YES" contentMode="scaleToFill" id="2Nb-MP-qP0">
-                            <rect key="frame" x="0.0" y="367" width="375" height="200"/>
+                            <rect key="frame" x="0.0" y="367" width="150" height="200"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
